--- a/src/app/components/layouts/header/header.component.html
+++ b/src/app/components/layouts/header/header.component.html
@@ -20,6 +20,15 @@
                 <li class="nav-item">
                     <a class="nav-link" [routerLink]="['/dogs']" routerLinkActive="active" (click)="closeNavbar()">Dogs</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/login']" routerLinkActive="active" (click)="closeNavbar()" *ngIf="!loggedIn">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/register']" routerLinkActive="active" (click)="closeNavbar()" *ngIf="!loggedIn">Register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLinkActive="active" (click)="closeNavbar(); logout()" *ngIf="loggedIn">Logout</a>
+                </li>
             </ul>
         </div>
     </div>
