--- a/src/app/components/timetable/timetable.component.html
+++ b/src/app/components/timetable/timetable.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-5 mb-5">
     <h1><strong>{{selectedPet?.name?.toLocaleUpperCase()}} TIMETABLE</strong></h1>
     <div class="row">
         <div class="col">
@@ -10,11 +10,11 @@
     <div class="row mt-3">
         <div class="col">
             <ul class="list-group">
-                <li *ngFor="let hora of horas" class="list-group-item d-flex justify-content-between align-items-center">
+                <li *ngFor="let hora of getHoras()" class="list-group-item d-flex justify-content-between align-items-center custom-li">
                     {{ hora.hora }} - {{ hora.hora + 1 }}
-                    <span *ngIf="hora.reservado" class="badge bg-danger">Reservado</span>
-                    <span *ngIf="!hora.reservado" class="badge bg-success">Lliure</span>
-                    <button *ngIf="!hora.reservado" type="button" class="btn btn-primary">Reservar</button>
+                    <span *ngIf="hora.reservado" class="badge bg-danger">Reserved</span>
+                    <span *ngIf="!hora.reservado" class="badge bg-success">Available</span>
+                    <button *ngIf="!hora.reservado" type="button" class="btn btn-primary" (click)="reserveHour(hora)">Reserve</button>
                 </li>
             </ul>
         </div>
